# plugins

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_new_plugin.yml
.github/workflows/: rust-tests.yml
docs/: README.md
plugins/animate-logo/: Cargo.toml  README.md
plugins/animate-logo/src/: main.rs
plugins/display-resolution/: Cargo.toml  README.md
plugins/display-resolution/src/: main.rs
plugins/docker/: Cargo.toml  README.md
plugins/docker/src/: main.rs
plugins/github-stats/: Cargo.toml  README.md
plugins/github-stats/src/: main.rs
plugins/music-player/: Cargo.toml  README.md
plugins/music-player/src/: main.rs
plugins/theme-detection/: Cargo.toml  README.md
plugins/theme-detection/src/: main.rs
plugins/theme-manager/: Cargo.toml  README.md
plugins/theme-manager/src/: main.rs
plugins/timezone/: Cargo.toml  README.md
plugins/timezone/src/: main.rs
plugins/user-info/: Cargo.toml  README.md
plugins/user-info/src/: main.rs
plugins/weather/: Cargo.toml  README.md
plugins/weather/src/: main.rs
