[workspace]
members = [
  "plugins/animate-logo",
  "plugins/display-resolution",
  "plugins/docker",
  "plugins/github-stats",
  "plugins/music-player",
  "plugins/theme-detection",
  "plugins/timezone",
  "plugins/user-info",
  "plugins/weather",
]
resolver = "2"

[workspace.dependencies]
xfetch-plugin-api = { git = "https://github.com/xfetch-cli/api", package = "xfetch-plugin-api" }
